prank. graphics design. niko oneshot. disintegration.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,32 @@
 <html>
 
 <head>
-<title>PH's Pages</title>
+<title>Index</title>
 </head>
 
-<body style="font-family:calibri;background-color:rgb(255, 255, 255)">
+<body style="font-family:ubuntu;background-color:rgb(170, 239, 255)">
 
 <marquee><p>....................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................go away....................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................</marquee></p>
 
+<div align="center">
+<img width="40%" alt="who the skibidi is niko oneshot" src="resources/images/whotheligmaisnikooneshit (Copy).png" />
+</div>
+
 <h1 align="center"><b>Hi</b></h2>
 
-<p>Welcome to awesomesauce, The Website</p>
+<p>Welcome to awesomesauce, The Website.</p>
+
+<p align="right" style="background-color:rgb(255, 255, 255)">Here you may find various awesomesauces,</p>
+
+<p align="left">Drowning (in the awesomesauces) is of highest concern, so please be careful!</p>
 
 <div align="center">
-<img width="100%" alt="who the skibidi is niko oneshot" src="resources/images/whotheligmaisnikooneshit.png" />
+<button><a href="pranked.html">Button that does nothing</a></button>
 </div>
+
+<hr>
+
+<p align="center" style="font-size:215%">Yeah maybe something will be here l8t3r but i'm too cool to do that rn 💥</p>
 
 </body>
 
